--- a/tes/requirements.txt
+++ b/tes/requirements.txt
@@ -1,11 +1,19 @@
 asgiref==3.8.1
 cffi==1.16.0
 cryptography==42.0.8
+dj-database-url==2.2.0
 Django==5.0.7
+django-cors-headers==4.4.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+gunicorn==22.0.0
 jwt==1.3.1
+packaging==24.1
+psycopg2-binary==2.9.9
 pycparser==2.22
 PyJWT==2.8.0
+python-dotenv==1.0.1
 sqlparse==0.5.1
+typing_extensions==4.12.2
 tzdata==2024.1
+whitenoise==6.7.0
